added handlers get chats and get chat by chatid
